Prevent overflow of headers on small screens

--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -79,6 +79,7 @@
   .heading {
     margin: 0;
     padding: 3em;
+    width: 100vw;
   }
 
   .heading h2 {
@@ -183,6 +184,10 @@
   html {
     padding: 0;
     margin: 0;
+  }
+
+  #content h2 {
+    margin-bottom: 0.5em;
   }
 
   [class^=drawer] {
